Pedal Wrapper: * switch from jquery to CSS animations (performance) * make stepping work flawlessly (multiple clicks, stop at the end, ...) * add (softened) scroll wheel reaction
Resize background image to a more reasonable size

--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -10,7 +10,7 @@
 
 #pedalboard-dashboard {
     background:#393939 url(../img/background.jpg) repeat;
-    background-size: auto 128em;
+    background-size: auto 1200px;
     position: absolute;
     top: 45px;
     left: 0;
