--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -20,12 +20,11 @@
     border-color: #111;
     border-style: dotted;
     border-width: 0 1px 0 0;
-    bottom: 46px;
+    bottom: 45px;
     left: 0;
-    padding-top: 18px;
     position: fixed;
     right: 0;
-    top: 68px;
+    top: 45px;
     width: 240px;
     .control-group {
       float: left;
@@ -43,9 +42,12 @@
     }
   }
   .pedalboards {
-    left: 252px;
-    position: absolute;
-    right: 10px;
+    left: 240px;
+    position: fixed;
+    right: 0px;
+    top: 45px;
+    bottom: 45px;
+    background: #111;
     .pedalboard {
       color: #fff;
       float: left;
