Background for filters and other left hand blocks

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -1,5 +1,5 @@
 #cloud-plugins-library {
-  background-color: #333;
+  background: #2c2c2c;
   bottom: 45px;
   left: 0;
   overflow: auto;
@@ -32,10 +32,6 @@
     }
   }
   .filter {
-    background: url(@wallpaper) repeat fixed;
-    border-color: #111;
-    border-style: dotted;
-    border-width: 0 1px 0 0;
     bottom: 45px;
     left: 0;
     position: fixed;
