--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -1,5 +1,5 @@
 #pedalboards-library {
-  background: url(@wallpaper) repeat fixed;
+  background: #2c2c2c;
   bottom: 46px;
   left: 0;
   overflow-x: hidden;
