--- a/html/css/less/social.less
+++ b/html/css/less/social.less
@@ -1,5 +1,5 @@
 #mod-social-network { 
-  background: url(@wallpaper) repeat fixed;
+  background: #2c2c2c;
   bottom: 45px;
   top: 0;
   font-size: 15px !important;
