--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7187,19 +7187,6 @@ header#pedalboard-actions,
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
   z-index: 5;
 }
-header#pedalboard-actions h1,
-#bank-library header h1,
-#cloud-plugins-library header h1,
-#pedalboards-library header h1 {
-  font-weight: 2em;
-  text-transform: uppercase;
-  font-weight: normal;
-  color: #999;
-  display: inline-block;
-  font-size: 24px;
-  line-height: 45px;
-  padding: 0;
-}
 header#pedalboard-actions .help,
 #bank-library header .help,
 #cloud-plugins-library header .help,
@@ -7306,8 +7293,38 @@ header#pedalboard-actions button.js-bypass-r.selected,
 #pedalboards-library header button.js-bypass-r.selected {
   background-color: #333;
 }
+header#pedalboard-actions h1,
+#bank-library header h1,
+#cloud-plugins-library header h1,
+#pedalboards-library header h1 {
+  font-weight: 2em;
+  text-transform: uppercase;
+  font-weight: normal;
+  color: #999;
+  display: inline-block;
+  font-size: 24px;
+  line-height: 49px;
+  height: 45px;
+  padding: 0;
+  padding-left: 38px;
+  background-position: 0 50%;
+  background-size: 32px;
+  background-repeat: no-repeat;
+}
 header#pedalboard-actions {
   box-shadow: 0 2px 12px black;
+}
+header#pedalboard-actions h1 {
+  background-image: url(../img/icons/white/assembler.png);
+}
+#bank-library header h1 {
+  background-image: url(../img/icons/white/banks.png);
+}
+#cloud-plugins-library header h1 {
+  background-image: url(../img/icons/white/pluginlibrary.png);
+}
+#pedalboards-library header h1 {
+  background-image: url(../img/icons/white/pedalboardlibrary.png);
 }
 .tooltip {
   background: white;
